@@ -170,6 +170,11 @@ void RenderImage::printObject(QPainter *p, int /*_x*/, int /*_y*/, int /*_w*/, i
         if(cWidth > 2 && cHeight > 2)
         {
             //qDebug("qDrawShadePanel %d/%d/%d/%d", _tx + leftBorder, _ty + topBorder, cWidth, cHeight);
+#ifdef _KWQ_
+            p->setPen (Qt::lightGray);
+            p->setBrush (Qt::NoBrush);
+            p->drawRect (_tx, _ty, cWidth, cHeight);
+#else
             qDrawShadePanel( p, _tx + leftBorder + leftPad, _ty + topBorder + topPad, cWidth, cHeight,
                              KApplication::palette().inactive(), true, 1 );
             if(berrorPic && !pix.isNull() && (cWidth >= pix.width()+4) && (cHeight >= pix.height()+4) )
@@ -191,6 +196,7 @@ void RenderImage::printObject(QPainter *p, int /*_x*/, int /*_y*/, int /*_w*/, i
                 if (aw>15 && ah>fm.height())
                     p->drawText(ax, ay, aw, ah , Qt::WordBreak, text );
             }
+#endif
         }
     }
     else if (image && !image->isTransparent())
